# rust-simple-api

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20240323143001_create_course_table.sql  20240323143812_create_student_table.sql  20240325222536_create_avatar_table.sql  20240325234422_add_unique_key_student_id_on_avatar.sql  20240326200827_create_subject_table.sql
src/: custom.rs  main.rs
src/avatar/: controller.rs  model.rs  repository.rs  service.rs
src/course/: controller.rs  model.rs  repository.rs  service.rs
src/infra/: db.rs
src/menu/: controller.rs
src/student/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/subject/: controller.rs  model.rs  repository.rs  service.rs
src/view/: menu.jinja  mod.rs
src/view/avatar/: create.jinja  list.jinja
src/view/course/: create.jinja  edit.jinja  list.jinja  show.jinja
src/view/student/: create.jinja  group-by.jinja  list.jinja  show.jinja
src/view/subject/: create.jinja  list.jinja
