[package]
name = "mini-projeto-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["form"]}
dotenv = "0.15.0"
futures = "0.3.30"
minijinja = { version = "1.0.12", features = ["builtins"] }
nanoid = "0.4.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "time"]}
tokio = { version = "1.36.0", features = ["full"] }
